2009-01-01 mmichaud <michael.michaud@free.fr>
    * fixed bug 1821235 : I had to change a lot of code in 
    ECWImage class (maybe more than needed, but at least, it seems to work...)
    changed:
    core/trunk/src/com/vividsolutions/jump/workbench/imagery/ecw/ECWImage.java

2008-12-31 beckerl <becker.larry@gmail.com>
    new Function: Search All Attributes aims to add search engine capability to a gis.
    added:      
    org.openjump.core.ui.plugin.queries.SearchAllAttributes.java
    
2008-12-27 mentaer <sstein@geo.uzh.ch>
    Added function to simplify polygons if they are part of a tesselation in Tools/Generalization.
    added:
    org.openjump.core.ui.plugin.tools.generalization.SimplifyPolygonCoveragePlugIn
    
2008-12-27 mentaer <sstein@geo.uzh.ch>
    Added function to extract boundaries of polygons in Tools/Edit Geometry/Convert/.
    This function can be used to simplify the boundaries and then to recreate 
    simplified polygons. 
    added:
    org.openjump.core.ui.plugin.tools.geometrychange.ExtractCommonBoundaryBetweenSelectedPolysPlugIn
    org.openjump.core.graph.polygongraph.PolygonGraph
    org.openjump.core.graph.polygongraph.PolygonGraphEdge
	org.openjump.core.graph.polygongraph.PolygonGraphNode
	
2008-12-27 mentaer <sstein@geo.uzh.ch>
    . Internationalization for Extract Point plugin. 
    . removal of ISA simplification plugin (made init as comment in default-plugins.xml).
    changed:
    org.openjump.core.ui.plugin.tools.geometrychange.ExtractPointsPlugIn
        
2008-12-02 beckerl <becker.larry@gmail.com>
    Modified findMaxStringLength() to not allow zero length string fields  
    changed:      
    com.vividsolutions.jump.io.ShapefileWriter

2008-11-22 mentaer <sstein@geo.uzh.ch>
    Added color theming type selection back (from O. Bedel, SIGLE).
    changed:      
    com.vividsolutions.jump.workbench.ui.renderer.style.ColorThemingStylePanel
    added: