@@ -53,6 +53,7 @@
 	<plug-in>com.vividsolutions.jump.workbench.ui.plugin.FeatureStatisticsPlugIn</plug-in>	
 	<plug-in>com.vividsolutions.jump.plugin.qa.DiffGeometryPlugIn</plug-in>	
 	<plug-in>org.openjump.core.ui.plugin.tools.DeleteEmptyGeometriesPlugIn</plug-in>
+	<plug-in>org.openjump.core.ui.plugin.tools.DeleteDuplicateGeometriesPlugIn</plug-in>	
 	<!--- =========  Edit Geometry ====================  /-->
 	<!--- =========  Edit Geometry - Convert ====================  /-->
 	<plug-in>org.openjump.core.ui.plugin.tools.geometrychange.ExtractPointsPlugIn</plug-in>	
